Fix width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
 
 .app-container {
   padding: 20px;
-  min-width: 1000px;
   border: 2px solid #ccc;
   border-radius: 10px;
   background-color: #ffffff;
